tests/negative/bit_cast_size_mismatch.ax
module bit_cast_size_mismatch;

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    let value: u64 = bit_cast(u64, cast(u32, 1));
    return cast(i32, value);
}
